--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -8,10 +8,9 @@ repository = "https://github.com/stackabletech/trino-operator"
 version = "0.2.0-nightly"
 
 [dependencies]
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag= "0.7.0" }
-stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", tag = "0.3.0" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.7.0" }
+stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", branch = "adapt_to_new_operator_structure" }
 
-duplicate = "0.3.0"
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
