--- a/deploy/crd/trinocluster.crd.yaml
+++ b/deploy/crd/trinocluster.crd.yaml
@@ -22,6 +22,23 @@ spec:
           properties:
             spec:
               properties:
+                authentication:
+                  nullable: true
+                  properties:
+                    basic:
+                      items:
+                        properties:
+                          name:
+                            type: string
+                          namespace:
+                            nullable: true
+                            type: string
+                        required:
+                          - name
+                        type: object
+                      nullable: true
+                      type: array
+                  type: object
                 authorization:
                   nullable: true
                   properties:
@@ -75,9 +92,6 @@ spec:
                         nodeDataDir:
                           nullable: true
                           type: string
-                        passwordFileContent:
-                          nullable: true
-                          type: string
                         queryMaxMemory:
                           nullable: true
                           type: string
@@ -115,9 +129,6 @@ spec:
                                 nullable: true
                                 type: string
                               nodeDataDir:
-                                nullable: true
-                                type: string
-                              passwordFileContent:
                                 nullable: true
                                 type: string
                               queryMaxMemory:
@@ -242,14 +253,11 @@ spec:
                   nullable: true
                   properties:
                     name:
-                      description: The name of the configmap
                       type: string
                     namespace:
-                      description: Optional namespace.
                       nullable: true
                       type: string
                     storeType:
-                      description: "Optional store type. Defaults to \"JKS\""
                       nullable: true
                       type: string
                   required:
@@ -273,9 +281,6 @@ spec:
                           nullable: true
                           type: string
                         nodeDataDir:
-                          nullable: true
-                          type: string
-                        passwordFileContent:
                           nullable: true
                           type: string
                         queryMaxMemory:
@@ -315,9 +320,6 @@ spec:
                                 nullable: true
                                 type: string
                               nodeDataDir:
-                                nullable: true
-                                type: string
-                              passwordFileContent:
                                 nullable: true
                                 type: string
                               queryMaxMemory:
