adapted to PR review.

--- a/examples/simple-trino-cluster.yaml
+++ b/examples/simple-trino-cluster.yaml
@@ -7,7 +7,7 @@ spec:
   nodeEnvironment: production
   hive:
     namespace: default
-    name: simple-derby
+    name: simple-hive-derby
   opa:
     namespace: default
     name: simple-opa
