--- a/examples/simple-hive-cluster-derby.yaml
+++ b/examples/simple-hive-cluster-derby.yaml
@@ -1,7 +1,7 @@
 apiVersion: hive.stackable.tech/v1alpha1
 kind: HiveCluster
 metadata:
-  name: simple-derby
+  name: simple-hive-derby
 spec:
   version: 2.3.9
   metastore:
