--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -11,7 +11,7 @@ version = "0.3.0-nightly"
 [dependencies]
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.8.0" }
 stackable-trino-crd = { path = "../crd" }
-stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", branch = "main" }
+stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", tag = "0.5.0" }
 
 anyhow = "1.0"
 clap = "3.0"
@@ -24,7 +24,7 @@ serde_yaml = "0.8"
 snafu = "0.7"
 strum = "0.23"
 strum_macros = "0.23"
-tokio = { version = "1.13", features = ["full"] }
+tokio = { version = "1.14", features = ["full"] }
 tracing = "0.1"
 
 [build-dependencies]
