Use trino name space for cluster ref objects if nothing is provided.

--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -210,10 +210,10 @@ spec:
                     name:
                       type: string
                     namespace:
+                      nullable: true
                       type: string
                   required:
                     - name
-                    - namespace
                   type: object
                 nodeEnvironment:
                   type: string
@@ -226,10 +226,10 @@ spec:
                     name:
                       type: string
                     namespace:
+                      nullable: true
                       type: string
                   required:
                     - name
-                    - namespace
                   type: object
                 s3:
                   description: Contains all the required connection information for S3.
