fix: allow Trino serviceuser to read/write secret objects

--- a/deploy/manifests/roles.yaml
+++ b/deploy/manifests/roles.yaml
@@ -38,6 +38,7 @@ rules:
     resources:
       - pods
       - configmaps
+      - secrets
       - services
       - endpoints
       - serviceaccounts
