--- a/deploy/helm/trino-operator/templates/roles.yaml
+++ b/deploy/helm/trino-operator/templates/roles.yaml
@@ -38,6 +38,7 @@ rules:
     resources:
       - pods
       - configmaps
+      - secrets
       - services
       - endpoints
       - serviceaccounts
