--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -8,8 +8,8 @@ repository = "https://github.com/stackabletech/trino-operator"
 version = "0.3.0-nightly"
 
 [dependencies]
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.9.0" }
-stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", tag = "0.5.0" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.10.0" }
+stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", branch = "main" }
 
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
