--- a/deploy/manifests/serviceaccount.yaml
+++ b/deploy/manifests/serviceaccount.yaml
@@ -5,10 +5,10 @@ kind: ServiceAccount
 metadata:
   name: trino-operator-serviceaccount
   labels:
-    helm.sh/chart: trino-operator-0.4.0-nightly
+    helm.sh/chart: trino-operator-0.4.0
     app.kubernetes.io/name: trino-operator
     app.kubernetes.io/instance: trino-operator
-    app.kubernetes.io/version: "0.4.0-nightly"
+    app.kubernetes.io/version: "0.4.0"
     app.kubernetes.io/managed-by: Helm
 ---
 # Source: trino-operator/templates/serviceaccount.yaml
@@ -18,10 +18,10 @@ kind: ClusterRoleBinding
 metadata:
   name: trino-operator-clusterrolebinding
   labels:
-    helm.sh/chart: trino-operator-0.4.0-nightly
+    helm.sh/chart: trino-operator-0.4.0
     app.kubernetes.io/name: trino-operator
     app.kubernetes.io/instance: trino-operator
-    app.kubernetes.io/version: "0.4.0-nightly"
+    app.kubernetes.io/version: "0.4.0"
     app.kubernetes.io/managed-by: Helm
 subjects:
   - kind: ServiceAccount
