--- a/deploy/manifests/configmap.yaml
+++ b/deploy/manifests/configmap.yaml
@@ -85,8 +85,8 @@ kind: ConfigMap
 metadata:
   name: trino-operator-configmap
   labels:
-    helm.sh/chart: trino-operator-0.4.0-nightly
+    helm.sh/chart: trino-operator-0.4.0
     app.kubernetes.io/name: trino-operator
     app.kubernetes.io/instance: trino-operator
-    app.kubernetes.io/version: "0.4.0-nightly"
+    app.kubernetes.io/version: "0.4.0"
     app.kubernetes.io/managed-by: Helm
