--- a/deploy/helm/trino-operator/Chart.yaml
+++ b/deploy/helm/trino-operator/Chart.yaml
@@ -1,8 +1,8 @@
 ---
 apiVersion: v2
 name: trino-operator
-version: 0.3.1-nightly
-appVersion: "0.3.1-nightly"
+version: 0.3.1
+appVersion: "0.3.1"
 description: The Stackable Operator for Trino
 home: https://github.com/stackabletech/trino-operator
 maintainers:
