--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -9,9 +9,9 @@ repository = "https://github.com/stackabletech/trino-operator"
 version = "0.3.2-nightly"
 
 [dependencies]
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.10.0" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.12.0" }
 stackable-trino-crd = { path = "../crd" }
-stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", tag = "0.6.0" }
+stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", branch = "main" }
 
 anyhow = "1.0"
 clap = "3.0"
@@ -22,12 +22,12 @@ serde = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.8"
 snafu = "0.7"
-strum = "0.23"
+strum = { version = "0.23", features = ["derive"] }
 strum_macros = "0.23"
-tokio = { version = "1.16", features = ["full"] }
+tokio = { version = "1.17", features = ["full"] }
 tracing = "0.1"
 
 [build-dependencies]
 built = { version =  "0.5", features = ["chrono", "git2"] }
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.10.0" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.12.0" }
 stackable-trino-crd = { path = "../crd" }
