--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -11,7 +11,7 @@ version = "0.3.2-nightly"
 [dependencies]
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.12.0" }
 stackable-trino-crd = { path = "../crd" }
-stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", branch = "main" }
+stackable-regorule-crd = { git = "https://github.com/stackabletech/regorule-operator.git", tag = "0.7.0" }
 
 anyhow = "1.0"
 clap = "3.0"
@@ -23,7 +23,6 @@ serde_json = "1.0"
 serde_yaml = "0.8"
 snafu = "0.7"
 strum = { version = "0.23", features = ["derive"] }
-strum_macros = "0.23"
 tokio = { version = "1.17", features = ["full"] }
 tracing = "0.1"
 
