added events to roles, removed command* groups

--- a/deploy/helm/trino-operator/templates/roles.yaml
+++ b/deploy/helm/trino-operator/templates/roles.yaml
@@ -9,8 +9,6 @@ rules:
   - apiGroups:
       - opa.stackable.tech
     resources:
-      - openpolicyagents
-      - openpolicyagents/status
       - regorules
     verbs:
       - create
@@ -18,14 +16,6 @@ rules:
       - list
       - watch
       - patch
-  - apiGroups:
-      - hive.stackable.tech
-    resources:
-      - hiveclusters
-    verbs:
-      - get
-      - list
-      - watch
   - apiGroups:
       - ""
     resources:
@@ -91,23 +81,11 @@ rules:
     verbs:
       - get
   - apiGroups:
-      - command.{{ include "operator.name" . }}.stackable.tech
+      - events.k8s.io
     resources:
-      - inits
-      - restarts
-      - starts
-      - stops
+      - events
     verbs:
-      - get
-      - list
-      - patch
-      - watch
-  - apiGroups:
-      - command.{{ include "operator.name" . }}.stackable.tech
-    resources:
-      - inits/status
-    verbs:
-      - patch
+      - create
   - apiGroups:
       - {{ include "operator.name" . }}.stackable.tech
     resources:
