--- a/deploy/helm/trino-operator/configs/properties.yaml
+++ b/deploy/helm/trino-operator/configs/properties.yaml
@@ -1,14 +1,11 @@
 version: 0.1.0
 spec:
   units:
-    - unit: &unitDirectory
-        name: "directory"
-        regex: "^/|(/[\\w-]+)+$"
+    - unit: &unitNodeEnvironment
+        name: "node_environment"
+        regex: "^[a-z][a-z0-9_]*[a-z0-9]$"
         examples:
-          - "/tmp/xyz"
-    - unit: &unitPort
-        name: "port"
-        regex: "^([0-9]{1,4}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$"
+          - "a1_2_3b"
     - unit: &unitMemory
         name: "memory"
         regex: "(^\\p{N}+)(?:\\s*)((?:b|k|m|g|t|p|kb|mb|gb|tb|pb|B|K|M|G|T|P|KB|MB|GB|TB|PB)\\b$)"
@@ -17,12 +14,6 @@ spec:
           - "1024kb"
           - "500m"
           - "1g"
-    - unit: &unitUri
-        name: "uri"
-        regex: "^(([^:/?#]+):)?(//([^/?#]*))?([^?#]*)(\\?([^#]*))?(#(.*))?"
-        examples:
-          - "ldap://[2001:db8::7]/c=GB?objectClass?one"
-        comment: "Specified in https://tools.ietf.org/html/rfc3986#appendix-B"
 
 ###################################################################################################
 # node.properties
@@ -36,6 +27,7 @@ properties:
             file: "node.properties"
       datatype:
         type: "string"
+        unit: *unitNodeEnvironment
       roles:
         - name: "coordinator"
           required: true
