--- a/examples/simple-trino-cluster-authentication-opa-authorization.yaml
+++ b/examples/simple-trino-cluster-authentication-opa-authorization.yaml
@@ -51,6 +51,124 @@ stringData:
   # bob:bob
   bob: $2y$10$xVRXtYZnYuQu66SmruijPO8WHFM/UK5QPHTr.Nzf4JMcZSqt3W.2.
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: simple-trino-opa-rego
+  labels:
+    opa.stackable.tech/bundle: "trino"
+data:
+  trino.rego: |
+    package trino
+
+    users = {
+      "admin": { 
+        "schemas": {
+          "read": true,
+          "write": true
+        },
+        "tables":{ 
+          "iris_parquet": {
+            "read": true,
+            "write": true
+          }
+        }
+      },
+      "bob": {
+        "schemas": { 
+          "read": true, 
+          "write": false
+        },
+        "tables": {
+          "iris_parquet": {
+            "read": false,
+            "write": null
+          }
+        }
+      }
+    }
+  
+    default can_access_table = false
+    can_access_table {
+      user_can_read_table
+    }
+    
+    default can_create_table = false
+    can_create_table {
+      user_can_write_table
+    }
+    
+    default can_drop_table = false
+    can_drop_table {
+      user_can_write_table
+    }
+    
+    default can_show_tables = false
+    can_show_tables {
+      user_can_read_table
+    }
+    
+    default can_access_schema = false
+    can_access_schema {
+      user_can_read_schema
+    }
+    
+    default can_create_schema = false
+    can_create_schema {
+      user_can_write_schema
+    }
+    
+    default can_drop_schema = false
+    can_drop_schema {
+      user_can_write_schema
+    }
+    
+    default can_show_schemas = false
+    can_show_schemas {
+      user_can_read_schema
+    }
+    
+    default can_access_catalog = false
+    can_access_catalog {
+      is_valid_user
+    }
+    
+    default can_execute_query = false
+    can_execute_query {
+      is_valid_user
+    }
+    
+    default can_select_from_columns = false
+    can_select_from_columns {
+    is_valid_user
+      can_access_table
+    }
+    
+    default can_view_query_owned_by = false
+    can_view_query_owned_by {
+      is_valid_user
+    }
+    
+    user_can_read_table {
+      users[input.user.name].tables[input.request.table.table].read == true
+    }
+    
+    user_can_write_table {
+      users[input.user.name].tables[input.request.table.table].write == true
+    }
+    
+    user_can_read_schema {
+      users[input.user.name].schemas.read == true
+    }
+    
+    user_can_write_schema {
+      users[input.user.name].schemas.write == true
+    }
+    
+    is_valid_user {
+      _ = users[input.user.name]
+    }
+---
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCluster
 metadata:
@@ -58,31 +176,15 @@ metadata:
 spec:
   version: "0.0.362"
   hiveConfigMapName: simple-hive-derby
-  opaConfigMapName: simple-opa
+  opa:
+    configMapName: simple-opa
+    package: trino
   authentication:
     method:
       multiUser:
         userCredentialsSecret:
           namespace: default
           name: simple-trino-users-secret
-  authorization:
-    package: trino
-    permissions:
-      admin:
-        schemas:
-          read: true
-          write: true
-        tables:
-          iris_parquet:
-            read: true
-            write: true
-      bob:
-        schemas:
-          read: true
-          write: false
-        tables:
-          iris_parquet:
-            read: false
   s3:
     endPoint: changeme
     accessKey: changeme
