changed to operator-rs 0.20.0, regenerated charts

--- a/deploy/manifests/crds.yaml
+++ b/deploy/manifests/crds.yaml
@@ -186,12 +186,15 @@ spec:
                     inline:
                       description: S3 connection definition as CRD.
                       properties:
+                        accessStyle:
+                          enum:
+                            - Path
+                            - VirtualHosted
+                          nullable: true
+                          type: string
                         host:
                           nullable: true
                           type: string
-                        pathStyleAccess:
-                          nullable: true
-                          type: boolean
                         port:
                           format: uint16
                           minimum: 0.0
