--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -8,8 +8,7 @@ repository = "https://github.com/stackabletech/trino-operator"
 version = "0.3.2-nightly"
 
 [dependencies]
-#stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.21.0" }
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "s3-credentials" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.21.0" }
 
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
