Implement TrinoCatalog according to ADR
See
https://docs.stackable.tech/home/contributor/adr/ADR019-trino_catalog_definitions.html
and https://docs.stackable.tech/home/contributor/adr/ADR020-trino_catalog_usage.html

--- a/examples/simple-trino-cluster.yaml
+++ b/examples/simple-trino-cluster.yaml
@@ -20,12 +20,24 @@ spec:
             dbType: derby
 ---
 apiVersion: trino.stackable.tech/v1alpha1
+kind: TrinoCatalog
+metadata:
+  name: simple-trino-hive
+  labels:
+    trino: simple-trino
+spec:
+  connector:
+    hive:
+      metastoreConfigMap: simple-hive-derby
+---
+apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCluster
 metadata:
   name: simple-trino
 spec:
   version: "0.0.377"
-  hiveConfigMapName: simple-hive-derby
+  catalogLabelSelector:
+    trino: simple-trino
   coordinators:
     roleGroups:
       default:
