--- a/examples/simple-trino-cluster.yaml
+++ b/examples/simple-trino-cluster.yaml
@@ -24,7 +24,7 @@ kind: TrinoCluster
 metadata:
   name: simple-trino
 spec:
-  version: "0.0.377"
+  version: 377-stackable0
   hiveConfigMapName: simple-hive-derby
   coordinators:
     roleGroups:
