--- a/tests/templates/kuttl/smoke/00-install-minio.yaml
+++ b/tests/templates/kuttl/smoke/00-install-minio.yaml
@@ -1,11 +1,9 @@
 ---
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
-timeout: 300
 commands:
   - script: >-
-      helm upgrade test-minio
-      --install
+      helm install test-minio
       --namespace $NAMESPACE
       --set mode=standalone
       --set replicas=1
@@ -14,3 +12,4 @@ commands:
       --set users[0].accessKey=minio-access-key,users[0].secretKey=minio-secret-key,users[0].policy=readwrite
       --set resources.requests.memory=1Gi
       --repo https://charts.min.io/ minio
+    timeout: 600
