Add S3 TLS verification to smoke test

--- a/tests/templates/kuttl/smoke/05-assert.yaml
+++ b/tests/templates/kuttl/smoke/05-assert.yaml
@@ -8,7 +8,7 @@ timeout: 720
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: test-hive-postgres-metastore-default
+  name: hive-metastore-default
 status:
   readyReplicas: 1
   replicas: 1
