--- a/tests/templates/kuttl/smoke/10-assert.yaml
+++ b/tests/templates/kuttl/smoke/10-assert.yaml
@@ -8,7 +8,7 @@ timeout: 720
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: test-trino-coordinator-default
+  name: trino-coordinator-default
 status:
   readyReplicas: 1
   replicas: 1
@@ -16,7 +16,7 @@ status:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: test-trino-worker-default
+  name: trino-worker-default
 status:
   readyReplicas: 1
   replicas: 1
