--- a/tests/templates/kuttl/smoke/02-assert.yaml
+++ b/tests/templates/kuttl/smoke/02-assert.yaml
@@ -1,21 +1,7 @@
----
-apiVersion: kuttl.dev/v1beta1
-kind: TestAssert
-metadata:
-  name: install-postgres
-timeout: 600
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: hive-postgresql
-  labels:
-    app.kubernetes.io/name: postgresql
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: hive-postgresql
+  name: minio-mc
 status:
   readyReplicas: 1
   replicas: 1
