--- a/tests/templates/kuttl/smoke/04-assert.yaml
+++ b/tests/templates/kuttl/smoke/04-assert.yaml
@@ -2,7 +2,13 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
 metadata:
-  name: install-opa
-timeout: 300
-commands:
-  - script: kubectl -n $NAMESPACE rollout status daemonset test-opa-server-default --timeout 300s
+  name: install-postgres
+timeout: 600
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: hive-postgresql
+status:
+  readyReplicas: 1
+  replicas: 1
