--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -24,6 +24,7 @@ snafu = "0.7"
 strum = { version = "0.24", features = ["derive"] }
 tokio = { version = "1.19", features = ["full"] }
 tracing = "0.1"
+uuid = { version = "1.1.2", features = ["v4"] }
 
 [build-dependencies]
 built = { version =  "0.5", features = ["chrono", "git2"] }
